src/objects/ADvendio__DataImportMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Feature__c</fullName>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unique Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Import Mapping</label>
    <pluralLabel>Data Import Mappings</pluralLabel>
</CustomObject>